Bug 476210 - Unable to save document to samba server
Summary: Unable to save document to samba server
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.2
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
: 502711 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-28 19:15 UTC by ibis.elias
Modified: 2025-04-14 17:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ibis.elias 2023-10-28 19:15:45 UTC
SUMMARY
***
I am trying to scan some multi-page documents to then directly save to a SAMBA-Share on my server. Accessing the share using Dolphin works without issue, so does the actual scanning. If I then attempt to save the document to my specified path on the share having entered the new documents filename, I get the error: "An error ocurred while saving: No file name specified.". This should work. This not working is beyond awful.
***


STEPS TO REPRODUCE
1. Connect to Samba-Share via Dolphin
2. Open up SkanPage
3. Scan a Document
4. Open Save dialogue and navigate to previously connected Samba-Share
5. Enter new filename and hit "Save"

OBSERVED RESULT
Skanpage errors out, claiming that I did not specify a filename despite having specified said filename.

EXPECTED RESULT
Skanpage saves document to server. All is happy. Flowers are blooming.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.5.8-1-default
(available in About System)
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-11-11 11:44:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/skanpage/-/merge_requests/60
Comment 2 Alexander Stippich 2023-11-12 09:38:11 UTC
Git commit c00afea7ba5d29a28d96c7da2712300b6fd6bd9d by Alexander Stippich.
Committed on 12/11/2023 at 10:21.
Pushed by astippich into branch 'master'.

give a correct error message when attempting to save to network folders

M  +4    -0    src/DocumentSaver.cpp

https://invent.kde.org/utilities/skanpage/-/commit/c00afea7ba5d29a28d96c7da2712300b6fd6bd9d
Comment 3 Bug Janitor Service 2024-11-06 19:19:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/skanpage/-/merge_requests/86
Comment 4 Alexander Stippich 2024-11-24 12:30:47 UTC
Git commit 8d6eae043793f666797a6d6a0cc479260a72f95c by Alexander Stippich.
Committed on 24/11/2024 at 12:29.
Pushed by astippich into branch 'master'.

use KIO to save files to remote folders

M  +1    -0    .kde-ci.yml
M  +1    -0    CMakeLists.txt
M  +2    -0    src/CMakeLists.txt
M  +21   -1    src/DocumentModel.cpp
M  +1    -1    src/DocumentModel.h
M  +49   -19   src/DocumentSaver.cpp
M  +3    -2    src/DocumentSaver.h

https://invent.kde.org/utilities/skanpage/-/commit/8d6eae043793f666797a6d6a0cc479260a72f95c
Comment 5 Alexander Stippich 2025-04-14 17:05:49 UTC
*** Bug 502711 has been marked as a duplicate of this bug. ***