use KIO to save files to remote folders

BUG: 476210